cmd/imagefacadewebserver/if.yaml
apiVersion: v1
kind: List
metadata:
  name: "bds-perceptor components"
  resourceVersion: "0.0.1"
items:
- apiVersion: v1
  kind: ReplicationController
  metadata:
    name: if
    labels:
      app: perceptor-app
  spec:
    replicas: 1
    selector:
      name: bds-perceptor
    template:
      metadata:
        labels:
          name: bds-perceptor
        name: if
      spec:
        volumes:
          - emptyDir: {}
            name: "var-images"
          - name: dir-docker-socket
            hostPath:
              path: /var/run/docker.sock
          - name: imagefacadewebserver-config
            configMap:
              name: imagefacadewebserver-config
        containers:
          - name: perceptor
            image: mfenwickbd/imagefacadewebserver:latest
            imagePullPolicy: Always
            command:
              - ./imagefacadewebserver
            ports:
              - containerPort: 3004
            resources:
              requests:
                memory: 2Gi
                cpu: 50m
              limits:
                cpu: 500m
            volumeMounts:
#              - mountPath: /opt/blackduck/perceptor/logs
#                name: dir-perceptor-log
#              - mountPath: /var/images
#                name: dir-image
              - mountPath: /var/run/docker.sock
                name: dir-docker-socket
              - name: imagefacadewebserver-config
                mountPath: /etc/imagefacadewebserver
            terminationMessagePath: /dev/termination-log
            securityContext:
              privileged: true
        restartPolicy: Always
        terminationGracePeriodSeconds: 30
        dnsPolicy: ClusterFirst
        serviceAccountName: if-sa
        serviceAccount: if-sa
# not sure if this is actually necessary
#      securityContext:
#        privileged: true
- apiVersion: v1
  kind: Service
  metadata:
    name: if
    namespace: bds-perceptor
  spec:
    selector:
      name: bds-perceptor
    ports:
    - nodePort: 0
      port: 3005
      protocol: TCP
      targetPort: 3004
- apiVersion: v1
  kind: ConfigMap
  metadata:
    name: imagefacadewebserver-config
  data:
    imagefacadewebserver_conf.yaml: |
      DockerUser: ""
      DockerPassword: ""
